========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


* Version: default

2018-05-08

  - Fixed #287: In the price fecher, store the datetime instances as
    naive-in-UTC in order to avoid a serialization problem with older Python
    versions.


2018-05-06

  - Changes to support git versioning if hg versioning is not available.


2018-05-05

  - Fixed #289: Add option to find beancount version. All scripts now support
    --version.

  - Amended PR64 to remove the need for __getitem__(). Clarified docstring.

  - Merged PR64 from Jakob Schnitzer: Inventory: use dict instead of list as a
    base.


2018-05-04

  - Fixed #290: Validation of account name components was incorrectly swapped.


2018-05-03

  - Amended PR74: Adding a new unit test, fail if tags / link appear after the
    first posting. Performance amendment to tags/links and clarification to the
    freezing of tags & links and their default values.

  - Merged PR74 / Fixed #99: Allow tags and links to be spread over several
    lines.

  - Amended PR14: added simple unit testing for regexp, changes in parsing UTF-8
    account type to match changes in Beancount head.

  - Merged PR14 by Adrian Medrano Calvo: Support account names to consist of
    Unicode letters and numbers.

2018-05-02

  - Removed a few accidental __author__ metadatas from files, normalized to
    __copyright__ as all other files.


2018-05-01

  - Added patch for clean build for lexer. 2.6.1 results in a build warning.

  - Merged PR73 (Ethan Glasser-Camp) - Cleanups to lexer and more restrictive
    syntax for comments within a transaction's indented block.

  - Fixed failing test re. new grammar.

  - Merged PR29: Update grammar to allow comments in the middle of transactions
    (Ethan Glasser-Camp).

  - Merged PR71: Use enhanced extract method which passes existing entries
    (Patrick Ruckstuhl).


2018-04-29
